# sgod_stock

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/articles/: marscarschipdip_2060390190527451380.json
data/x/: aleabitoreddit.broken.jsonl  aleabitoreddit.cursor.json  aleabitoreddit.jsonl  aleabitoreddit.refresh.progress.json  aleabitoreddit.refreshing.jsonl  aleabitoreddit.restart.cursor.json  aleabitoreddit.search.2026-03-22_2026-03-25.cursor.json  aleabitoreddit.search.2026-03-24_2026-03-26.cursor.json  aleabitoreddit.search.2026-03-26.cursor.json  aleabitoreddit.search.cursor.json  aleabitoreddit.search.until_2026-03-17.cursor.json  aleabitoreddit.search.until_2026-03-21.cursor.json  aleabitoreddit.search.until_2026-03-22.cursor.json  aleabitoreddit.search.until_2026-03-23.cursor.json  aleabitoreddit.search.until_2026-03-24.cursor.json  debug_user_tweets_page1_auth.json
docs/: data_access.md  framework.md  manual.md  serenity_bottleneck_theory.md  skill_comparison.md
examples/: candidates.schema.csv
reports/: serenity_report.md
scripts/: fetch_x_search_browser_only.py  fetch_x_timeline_browser_only.py  refresh_x_text_browser_only.py
sgod_stock/: __init__.py  chrome_devtools.py  cli.py  market_data.py  models.py  reporting.py  scoring.py  text_filter.py  timeline.py  x_frontend.py
skills/serenity-bottleneck-picker/: SKILL.md
skills/serenity-bottleneck-picker/references/: evidence-checklist.md  output-templates.md  research-protocol.md  scorecard.md
