[project]
name = "sgod-stock"
version = "0.1.0"
description = "Serenity-style supply-chain bottleneck company discovery toolkit."
requires-python = ">=3.6"
dependencies = [
    "dataclasses>=0.8; python_version<'3.7'",
    "requests>=2.27.0,<2.28.0; python_version<'3.7'",
    "requests>=2.31.0; python_version>='3.7'",
    "websocket-client>=1.3.1,<1.4.0; python_version<'3.7'",
    "websocket-client>=1.7.0; python_version>='3.7'",
    "yfinance>=0.2.40; python_version>='3.8'",
]

[project.scripts]
sgod-stock = "sgod_stock.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sgod_stock*"]
